--- a/taptargetview/src/main/res/drawable/skip_button_bg.xml
+++ b/taptargetview/src/main/res/drawable/skip_button_bg.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true" android:id="@+id/skip_button_pressed">
         <shape android:shape="rectangle">
             <solid android:color="#ccffffff" />
         </shape>
     </item>
-    <item android:state_focused="true">
+
+    <item android:state_focused="true" android:id="@+id/skip_button_focused">
         <shape android:shape="rectangle">
             <stroke android:color="@android:color/white" />
         </shape>
     </item>
-    <item android:drawable="@android:color/holo_blue_dark" />
-</selector>
+
+    <item android:id="@+id/skip_button_normal">
+        <shape android:shape="rectangle">
+            <stroke android:color="@android:color/holo_blue_dark" />
+        </shape>
+    </item>
+</layer-list>
